--- a/style.css
+++ b/style.css
@@ -436,12 +436,22 @@ object-fit: contain;
     }
 
     .image1{
-        height: 150px;
+        width: 100%;
+        height: 100%;
+        
 
     }
 
+    .image1 img{
+        width: 100%;
+        height: 100%;
+        object-fit:contain ;
+    }
+
     .image2{
-        height: 150px;
+        height: 100%;
+        width: 100%;
+    
     }
 
     .divone{
@@ -486,6 +496,20 @@ object-fit: contain;
     width: 15%;
     padding-left: 0px;
 }
+.imgassets h2{
+    
+        font-size: 10px;
+    
+}
 
+.imgassets{
+    gap: 10px;
+}
+
+.imgassets p{
+    
+        font-size: 5px;
+    
+}
 
 }
